[gd_scene format=3 uid="uid://dhxcnrhagf2d7"]

[ext_resource type="Script" uid="uid://cacbntgvn4ii1" path="res://systems/item_display.gd" id="1_vnnf0"]
[ext_resource type="Texture2D" uid="uid://bfja06n5b8g04" path="res://items/icons/stopwatch.png" id="2_kck3v"]
[ext_resource type="FontFile" uid="uid://w4754gdg1xfu" path="res://fonts/Jersey25-Regular.ttf" id="3_a8psw"]

[node name="ItemDisplay" type="Control" unique_id=347329752]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vnnf0")

[node name="TextureRect" type="TextureRect" parent="." unique_id=619541035]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_kck3v")

[node name="number_label" type="Label" parent="." unique_id=1036677132]
layout_mode = 0
offset_left = 14.0
offset_top = 44.0
offset_right = 54.0
offset_bottom = 67.0
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_a8psw")
theme_override_font_sizes/font_size = 20
text = "x0"
horizontal_alignment = 1

[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
